--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ html.disable-scrolling {
     position: fixed;
     top: 150px;
     right: 50px;
-    z-index: 11;
+    z-index: -1;
     display: block;
     width: 500px;
     padding: 30px;
@@ -137,7 +137,7 @@ html.disable-scrolling {
         -ms-transition: opacity .5s ease-out;
          -o-transition: opacity .5s ease-out;
             transition: opacity .5s ease-out;
-    opacity: 1;
+    opacity: 0;
 }
 #voice-intro h3 {
     margin: 0 0 15px;
@@ -145,8 +145,9 @@ html.disable-scrolling {
 #voice-intro .lead {
     margin: 0;
 }
-#voice-intro.voice-hidden {
-    opacity: 0;
+#voice-intro.showing {
+    opacity: 1;
+    z-index: 11;
 }
 
 .section-travel a.nav-travel:hover,
