--- a/css/global.css
+++ b/css/global.css
@@ -33,16 +33,25 @@
 .csstransforms3d .carousel-inner>.next.left {
     left: 0;
     -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
 }
 .csstransforms3d .carousel-inner>.active.left,
 .csstransforms3d .carousel-inner>.prev {
     left: 0;
     -webkit-transform: translate3d(-100%, 0, 0);
+       -moz-transform: translate3d(-100%, 0, 0);
+        -ms-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
 }
 .csstransforms3d .carousel-inner>.active.right,
 .csstransforms3d .carousel-inner>.next {
     left: 0;
     -webkit-transform: translate3d(100%, 0, 0);
+       -moz-transform: translate3d(100%, 0, 0);
+        -ms-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
 }
 
 
