--- a/css/global.css
+++ b/css/global.css
@@ -89,6 +89,11 @@
 .navigation {
     font-family: 'Quicksand', helvetica, arial, sans-serif;
     font-weight: 300;
+}
+.site-title a,
+.site-title a:active,
+.navigation a,
+.navigation a:active {
     outline: none;
 }
 .site-title a:hover,
