--- a/css/small.css
+++ b/css/small.css
@@ -21,7 +21,7 @@
         text-align: center;
     }
     .site-title {
-        margin-top: 5px;
+        margin-top: 0;
         font-size: 32px;
     }
     .site-title,
