--- a/css/global.css
+++ b/css/global.css
@@ -177,6 +177,9 @@
     font-weight: 200;
     font-size: 42px;
 }
+.start .footer {
+    visibility: hidden;
+}
 .footer .social {
     margin-bottom: 0;
 }
