--- a/css/large.css
+++ b/css/large.css
@@ -214,42 +214,23 @@ header,
 }
 
 
-#map-years {
-    position: absolute;
-    left: 10%;
-    right: 10%;
-    bottom: 10%;
-    z-index: 50;
-    text-align: center;
-}
-#map-years.list-inline>li {
-    padding: 0 2px;
-    color: #888;
-}
-#map-years a {
-    color: #fff;
-    font-family: 'Quicksand', helvetica, arial, sans-serif;
-    font-weight: 300;
-}
-
 
 .toast {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 15%;
+    bottom: 18%;
     z-index: 50;
     display: block;
     text-align: center;
-    -webkit-transition: opacity .5s ease-out;
-       -moz-transition: opacity .5s ease-out;
-        -ms-transition: opacity .5s ease-out;
-         -o-transition: opacity .5s ease-out;
-            transition: opacity .5s ease-out;
-    opacity: 1;
 }
 .toast.hidden {
-    opacity: 0;
+    display: none;
+    -webkit-transition: display 0s ease-out .5s;
+       -moz-transition: display 0s ease-out .5s;
+        -ms-transition: display 0s ease-out .5s;
+         -o-transition: display 0s ease-out .5s;
+            transition: display 0s ease-out .5s;
 }
 .toast .content {
     display: inline-block;
@@ -262,6 +243,15 @@ header,
     font-family: 'Quicksand', helvetica, arial, sans-serif;
     font-weight: 300;
     font-size: 42px;
+    -webkit-transition: opacity .5s ease-out;
+       -moz-transition: opacity .5s ease-out;
+        -ms-transition: opacity .5s ease-out;
+         -o-transition: opacity .5s ease-out;
+            transition: opacity .5s ease-out;
+    opacity: 1;
+}
+.toast.hidden .content {
+    opacity: 0;
 }
 
 
